...
            android:layout_height="wrap_content"
            android:layout_weight="0.23" />

        <Button
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="Get Organized!"
            android:id="@+id/menu_button"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white" />

    </LinearLayout>
...
