<resources>
    <string name="app_name">StudentHub</string>
    <string name="to_do_list">To-do List</string>
    <string name="notes">Notes</string>
    <string name="countdown">Countdown</string>
    <string name="dashboard">Dashboard</string>
    <string name="scheduler">Schedule</string>
    <string name="_12">12</string>
    <string name="_3">3</string>
    <string name="_32">3</string>
    <string name="_6">6</string>
    <string name="_62">6</string>
    <string name="_9">9</string>
    <string name="_92">9</string>
    <string name="today">Today&#160;&#160;</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="t12am">12 am</string>
    <string name="t1am">1 am</string>
    <string name="t2am">2 am</string>
    <string name="t3am">3 am</string>
    <string name="t4am">4 am</string>
    <string name="t5am">5 am</string>
    <string name="t6am">6 am</string>
    <string name="t7am">7 am</string>
    <string name="t8am">8 am</string>
    <string name="t9am">9 am</string>
    <string name="t10am">10 am</string>
    <string name="t11am">11 am</string>
    <string name="t12pm">12 am</string>
    <string name="t1pm">1 pm</string>
    <string name="t2pm">2 pm</string>
    <string name="t3pm">3 pm</string>
    <string name="t4pm">4 pm</string>
    <string name="t5pm">5 pm</string>
    <string name="t6pm">6 pm</string>
    <string name="t7pm">7 pm</string>
    <string name="t8pm">8 pm</string>
    <string name="t9pm">9 pm</string>
    <string name="t10pm">10 pm</string>
    <string name="t11pm">11 pm</string>
    <string name="updating">updating</string>
    <string name="plus">+</string>
</resources>
