<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.studenthub.Todo"
    android:background="@color/myblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="To Do List"
        android:id="@+id/todoHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60dp"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textStyle="bold"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD TASK"
        android:id="@+id/AddTaskButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NewTaskInput"
        android:layout_above="@+id/AddTaskButton"
        android:layout_alignRight="@+id/todoHeading"
        android:layout_alignEnd="@+id/todoHeading"
        android:layout_alignLeft="@+id/todoHeading"
        android:layout_alignStart="@+id/todoHeading"
        android:textColor="@color/bright_foreground_material_dark"
        android:textAlignment="center"
        android:hint="click to enter new task" />

</RelativeLayout>
