...
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/to_do_list"
            android:id="@+id/todoButton"
            android:layout_weight="1"
            android:background="@color/colorPrimaryTurq"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
...
